@@ -12,26 +12,26 @@ DIST blueman-1.98_p20150105.tar.xz 1698524 SHA256 cb610b0c4799d87989a2f6147059fb
 DIST blueman-2.0.tar.xz 1941332 SHA256 81a5ca95124f12bfb62d2d2d0d265af70cdae1d43b0c6e4fc6d2bad8f82958f1 SHA512 44d3967d031f7482e7700674970eff08fee53d8cbeb96e46b2f97e2a2fb6b5790f663ed73129eab241545ebaa6c5748dc6cf6b90a2c4795b27e90b5399d71f80 WHIRLPOOL 394bac3e0b457fdbb79c69fe9181abafde3f9b1138ff71c4dc23bc78424b76284e3ad9cf02dc168848fa461541f86fa2bba5aee0f014e460f0852e1bfa163dae
 EBUILD blueman-1.23-r2.ebuild 2500 SHA256 d1bdf9e52681305cd3f89ebad0e7d2df55637c6a2374aecf95fc028eac7515a7 SHA512 d3aef2409eddea2dbcd95f5becae6e55e288c9faa143afed64b7b27d8bb9608c37ca706c3e253d898d38dda63706c63a85fd46c01c73c5ea91f9cfd1be3f3b70 WHIRLPOOL d8ca5b099e238f31ece314fcf1729b8b877720cbf94495f491ff37b8d078f6069a4e5a55b86c3196204a7ee393d3363dfd0334a3c79f21f15822a6e3a71707a7
 EBUILD blueman-1.98_p20150105.ebuild 2834 SHA256 d3fc1ac8481dfd0bfcc42a7b6c9455c46e9b4eca4b06166adffee291dba9ccc8 SHA512 3fbfe010c6c069bc798f643663961fbc7795fc8965a87a6ee6f01ad293e585a675ad413713a32391a101ad4471592db8599ddb94ab06301da810639b54a5d301 WHIRLPOOL 90fbe6656eb23deed46f80a71883f2531b19b254381e3e0fb4422ac709f37a7fe688a41fdcf11861d70d89da29dc9db182ab597f0d0b12db2374d731cdd54194
-EBUILD blueman-2.0.ebuild 2503 SHA256 ec3590e7eb3a9c5ba5c76cc92c540da23c40e23d82a2b9c6b90e912f7f0c9a9d SHA512 4caae331326acf82a497368951908e17abed2865d5fecc731b0c3bfef1d32836440fcb6f91a52e05ca893bbf4f71b130a56a81a862d14d6cb8a4e55ee62e4321 WHIRLPOOL fdef6648d15eb36c179db8f837046939bf64a33acb5be8217a57f0998de9652803e97b7a8edc211c5559de9f0773badfcef99f07f51616bdad01ae165d6d7843
-EBUILD blueman-9999.ebuild 2361 SHA256 8178af3f6c8f6d97a257033d1878017614982a34f3ca2dfaa5c07d7b048a0cb9 SHA512 67253742423fa4716a07104b5ffb3135254949ff570f1525268d2223b962048dac8e7fea237687fba05e6108bcf13f61fed9fc8d0b2bf2b3d997d9e207870cea WHIRLPOOL 24db33c52deaf444b299c87cba726d96a1f4ba8c255dfe92cb682afe27597b5714d58d996aaef1231b6745c502c8c7bef73bd7310a05643223e35d9cf90392dd
-MISC ChangeLog 7799 SHA256 eabfec91ca1b911729363364067e5a846456e87dbacf3a2a969aae9f042a272a SHA512 34cf952b4afc9993bc37c2ee901577ba38562f41b223e3d4e66f8209531769a1c12a96f9b3c5c6968a58c1f77c69c29e0691374390b90ff1880a1f322525e833 WHIRLPOOL 6dac004f6621ca226084a224e1f44addedb76d34e2a909460a7fd7aac5259870be59f5a3354e024d6bc45ef9f4160835e91a62a828c1c25835cc3b195d0b7717
+EBUILD blueman-2.0.ebuild 2806 SHA256 9f90abf54b1ea07295f8153974131653d10695f3ea91504cc797ece7e7594652 SHA512 13a86d7e557378f06e1ab879206cf31efc6f151d716d5f1f81ecc5e0ff1a0b88c3c3c4ec5900ca3f4b97502d0d33458294b3d124f07adab8da1c17a0843bcc19 WHIRLPOOL 8398c55bd9ad10a74055e28c60df9316240050010cc671b6b5fe8573140c9309304fb051b4ba1b6e67967a11e943c39f824be6144ad51116e3740237ac4e6d32
+EBUILD blueman-9999.ebuild 2664 SHA256 2115b232e1ed89e8592e91ef068552a9956d46468e4058803a747a9f9211aa76 SHA512 a782906882e8b7395a21d98db2da582aa665bbd1ae504bc784265a65680ec1a64e9a44d8302e967046e4f3ad72cc1918bacc00d2c8f654448ba66db62c3e46b3 WHIRLPOOL 14d2e72e4fef73807c787757d977017e1afe1d30c93a59643901a646845718ce2bdea36fbc74e5f6dcabc0992b533ce14723e2ee849783524d8a60cef4961897
+MISC ChangeLog 7963 SHA256 b7eff52fbdc13acf7f231211d16e765ca72d2a901877e0435b41a21272ea9ae5 SHA512 60bf6157a8272ef8368ba193935ea30fc5b92a0f81953bf3c25c6350a5d3f1d48418663a9b21c26429181fe41ba976a4c0661d5a01578bf76abf5b0951d6a2ee WHIRLPOOL 6511c5ea291fc9e6eafddb004e7141a5dd78c7641efbfab614cef4787867e05268cbf09e39d71a0dd84f2b877ddac937da33884ce025de805d5bc29a76dd0750
 MISC metadata.xml 905 SHA256 a09e159e540efe4f25a9ec03094e5df5f1e75c86554f9501b31aa87d5c7710cd SHA512 47c056ea98bb3910a3515cb766841d60509d914ecced9fc9059f8805d700a3607a9c46e0a483a2fee2a94bb8fcb426247557ed3609de36550fabc5d9e0ea98b2 WHIRLPOOL 76cfd935e45cb63afb6447836b6b84f8559cdc7723acce30358bb2f36379813858b5f010c9f2517b0b67a04c5fdbcb6474caccd96807900cfbaf8f389626ef63
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQJ8BAEBCABmBQJVxiNhXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+iQJ8BAEBCABmBQJVxitKXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
 ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQ2REJCMDdDQzRGMERBRDA2RUEwQUZFNDFC
-MDdBMUFFQUVGQjQ0NjRFAAoJELB6GurvtEZOz6QP/3t8LeBjZiZrHR8wsNWLtf1J
-7GPpp8CLwqg9y2Tdqo+yBViCTMNaaHiR4whtIxad+KElh7h2XNDj5fibeu4x3Iq8
-wCtEJjRjimR1u/TUx0SeieFd05H7z1DyYmwaffegHJ4K2ucxLt1QQhT6C3rRDJ6d
-MGe6LBVcD4Y4/eUnniZVuVoOBwe6TiT74NKBF5CHqFA5+KAHFZDFPiWJ1OIWjwl2
-zvvc9i4K9YD+gHkomrf+ATueAksMF8A1kjEiFns+IpJmMAfdj7lvYOnMGeYrOCm9
-n40kFJmyGKL0ecLrOJQKKuBJ+2x2+Kgx5GCSv8vOJvJOXjFWnXgkpXFhWYJOkpiB
-BUNOSaI/bT0/syHJcQaxFsNU9UtkT+W/+O7HvI0QMxe9WQQU3PXDyqMyOGoVAK6L
-iD1dFqrQjOiuDvtB3ljmWHHnPZHO3dsNVlvaqbFMfFhiAlkyqKosc0EH7a2dAVIe
-bEvmFTN1QlV+EV8xjjCIAGV85M+V9ggm+elYFKi1g08R2pIfv65yv1R5ETSPh1az
-WXEnE7E//JuMQ05jZLsDSDzij/LqIWf0iifGRqTqj7TZhHi2mfu9YhZwObQqAVVD
-zldbSVcHMKKv0QFlkbJvZjuvTRCztyc/0lmR2kVMWg4xcWGDo4IxauXVu5WSF3RD
-hDcSAhnfWtT8G8I3O8ZO
-=GpfY
+MDdBMUFFQUVGQjQ0NjRFAAoJELB6GurvtEZOkpIP/265lJpPILFTHteiWI/XL2gU
+cU0Gy4HQ+Affs4bm1de4wXAUObCvr04/2VX+FEw2s73yDxY0rb9rKC96mVxcjuyM
+8CTPFSslGk/I1Mg6QzfznVIktIonY4QCuobI37dMv1lVEm16LKMN3xkeRbWbB14C
+B7FCSlf2U24jj3RMF0ojhkrJeP4oj8p1zZe7Q+28y240ThZOLnDMunxkT+CTjPhK
+mPKHqcza9iQWaOPFysDd/UlBLnbA8WbTc6qSYJ0q/1nNYFXO2yrVbmzqWnK+ovCi
+NWDBuAuxUTXcS5NijX1TYe4cmGeQKndqYra75qVk+ahzCY4UxGUj5Vp/VhosJQYK
+ibfeEXrdcuhtWq7d+zRygZmVlQOm5TKz3XVd7w1EMlFocm6PC55gzZwfZ3DpSChL
+ryPfOKMHrajirmPMAlaCbWohq9ntY+vR5AbCtBlYZdwSo/C/gCQFYvqzEAJRdRl7
+IWrMOMIy0RpCDf3OtOODQSllec7f4CvI1OPCzk5mdXTKZR5HuzhlGFf+gaZrMBPF
+ZAo7nKt9qbqrj7q+vpoYhdw2gLUrwyoI/xq/x4SjaJtl3EpInUkp3AicbdxMA3z3
+nYki2U4XxgaGGosVWxPnRr7JL9z0zcdaE+J67qizl4TzAkVQ2mYOY779yJsz3Csb
+TgkgCHwYtTY0bOFZXfTM
+=o5lr
 -----END PGP SIGNATURE-----
